# Chess-Modern

./: .gitignore  AGENTS.md  CLAUDE.md  CLOUD_PARENT_AGENT_PROMPT.md  Cargo.toml  FULL_MASTER_AGENT_INSTRUCTIONS.md  KNOWN_ISSUES.md  MIGRATION.md  README.md  VISUAL_PARITY_AGENT_PROMPT.md  flutter_rust_bridge.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cursor/: environment.json  hooks.json  install.sh
.cursor/hooks/: regen-frb-bindings.sh
.github/workflows/: ci.yml
.pnpm-store/v10/index/06/: d8f604e38ef37a375b21f9f5ef0c817b3111055c6ab9143a9118aee6c1d2ea-detect-libc@2.1.2.json
.pnpm-store/v10/index/07/: 9f0d18112873c63d31658240697f82af710427b822228cd1adb1ec665d40a3-zimmerframe@1.1.4.json
.pnpm-store/v10/index/12/: 9c6bbfe36bfc268be1970518f24860b585a26f98795d43a8c2c726811df526-esm-env@1.2.2.json
.pnpm-store/v10/index/18/: 387090b7f2c162f6b3abc48f286b8be79799f1fa8f52fb244dbb5a1a8b798c-readdirp@4.1.2.json
.pnpm-store/v10/index/20/: b5e6c42ec702c9e42b67ac9603deb6baaa5b504a48becb92db0582accd8fcd-@sveltejs+vite-plugin-svelte@7.0.0.json
.pnpm-store/v10/index/2c/: 8f6effe95a606e03b354c3292256d983eb22571560ec22d9f502eb1078de5b-@jridgewell+remapping@2.3.5.json
.pnpm-store/v10/index/31/: 46d9e7ce84810a9d4670b8c83ae5a1ddc111dcaf1384daa46607316d8289a5-devalue@5.7.1.json
.pnpm-store/v10/index/35/: 7601ce29cdadb95fada3c6cab6cfa03d7d0b587d95f23fd66ce0598bd75137-lightningcss@1.32.0.json
.pnpm-store/v10/index/37/: c4a97cf527529d5b2be3cc616f2a496765f54fb0c0d588e102b13980f2f490-nanoid@3.3.11.json
.pnpm-store/v10/index/40/: ff3c0402af31a9bfdcdc47eaf8f6a36d51e8c8f165401dea7970012fe99c6b-picomatch@4.0.4.json
.pnpm-store/v10/index/42/: 0ceef247c1be8f9c038f7ada39cfd4a912e83a29e4d4ba83b4792c5609af86-chokidar@4.0.3.json
.pnpm-store/v10/index/47/: 3786f49bb96da83606fd7f97095526f044deae93b57b247592cb0b27e0e69b-lightningcss-darwin-arm64@1.32.0.json
.pnpm-store/v10/index/49/: 6d77c2cec18da789ea9ed0e823b69dc85b6047375f727a5ab9934c3b68ef23-locate-character@3.0.0.json  c68f767d5d41cce06e5d101537933a65471542eddfde17260390368c95859e-@types+trusted-types@2.0.7.json
.pnpm-store/v10/index/51/: 527213d32db4eb014080cac35b246fd9c0c10b91e70b860f7fbcd8ae898099-acorn@8.16.0.json  758c2a12cec1529bef6f0852d40f5f17d853ebac7726ed52b2bff2e184f024-source-map-js@1.2.1.json
.pnpm-store/v10/index/52/: 4367c35fe81447de711f32a721c842e5987643ef1e2c1c43bf2c87eca62226-@tsconfig+svelte@5.0.8.json
.pnpm-store/v10/index/66/: b4f9de800aaed038f98b4158f41bb4f3b121b5436f14f4a2b71811129deb75-rolldown@1.0.0-rc.17.json
.pnpm-store/v10/index/67/: 63a3097899f9f6d8672ecf98fdd64673a933df85cbea289ca0c499413a3303-@tauri-apps+cli-darwin-arm64@2.10.1.json  f65e3a0565edb712619feefeb8747cea6f129abffcb66675b917c9ceecc95c-aria-query@5.3.1.json
crates/chess_bridge/: Cargo.toml
crates/chess_bridge/src/: api.rs  broadcast.rs  frb_generated.rs  lib.rs  platform.rs
crates/chess_core/: Cargo.toml
crates/chess_core/src/: api.rs  clock.rs  commands.rs  lib.rs  platform.rs  session.rs
crates/chess_core/src/ai/: custom.rs  mod.rs  stockfish.rs
crates/chess_core/src/engine/: mod.rs
crates/chess_core/tests/: integration.rs
flutter/: DESIGN_SYSTEM.md  README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/lib/src/: app.dart
flutter/lib/src/audio/: synth.dart  (+1 more)
flutter/linux/: CMakeLists.txt
flutter/linux/flutter/: generated_plugins.cmake
flutter/linux/runner/: rust_lib.cmake
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/test/: illegal_move_test.dart  util_squares_test.dart
flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/windows/runner/: Runner.rc
legacy/svelte/: App.svelte
legacy/svelte/styles/: app.css
legacy/tauri/: Cargo.toml
legacy/tauri/icons/: icon.icns
legacy/tauri/src/: lib.rs  main.rs
legacy/tauri/tests/: integration.rs
scripts/: build-linux.sh  build-mac.sh  build-stockfish-android.sh  build-win.sh  fetch-stockfish.sh  linux.Dockerfile  sign-mac.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  lib.rs  session.rs
src-tauri/src/ai/: custom.rs  difficulty.rs  mod.rs  stockfish.rs
src-tauri/src/pgn/: mod.rs
src-tauri/tests/: integration.rs
src/lib/api/: bindings.ts  client.ts  contract.ts  index.ts  mock.ts
src/lib/board/: Board.svelte  BoardThemePreview.svelte
src/lib/modals/: About.svelte  NewGame.svelte  Promotion.svelte  Settings.svelte
src/lib/panels/: Captures.svelte  Clock.svelte  MoveHistory.svelte
src/lib/pieces/: Piece.svelte  minimal.ts  modern.ts
src/lib/stores/: gameStore.svelte.ts  settingsStore.svelte.ts  types.ts
src/lib/ui/: Button.svelte  Modal.svelte
src/lib/util/: illegalMove.ts  squares.ts
src/styles/: app.css
(+103 files in other folders)
