[workspace]
resolver = "2"
members = [
    "crates/chess_core",
    "crates/chess_bridge",
    "legacy/tauri",
]
default-members = ["crates/chess_core", "crates/chess_bridge"]

[workspace.package]
edition = "2021"
rust-version = "1.77"
authors = ["gchavezm"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["sync", "process", "io-util", "macros", "rt-multi-thread", "time"] }
log = "0.4"
async-trait = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
