[package]
name = "chess"
version = "0.1.0"
description = "A polished, native cross-platform chess game."
authors = ["gchavezm"]
edition = "2021"
rust-version = "1.77"
default-run = "chess"

[lib]
name = "chess_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

specta = { version = "2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
rand = "0.8"
tokio = { version = "1", features = ["sync", "process", "io-util", "macros", "rt-multi-thread", "time"] }
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
