[package]
name = "chess_bridge"
version = "0.1.0"
description = "flutter_rust_bridge crate exposing the chess_core API to Flutter."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "chess_bridge"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chess_core = { path = "../chess_core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
once_cell = "1"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows", target_os = "android"))'.dependencies]
# Process spawning lives behind tokio's process feature on host platforms.
# iOS gets a NoStockfishSpawner and never reaches this code path.
