[package]
name = "chess"
version = "0.1.0"
description = "Legacy Tauri shell for the Chess app (kept for reference; Flutter is the shipping UI)."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "chess"

[lib]
name = "chess_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chess_core = { path = "../../crates/chess_core", features = ["tauri-events"] }

tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

specta = { version = "2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
